[package]
name = "bichrome"
version = "0.1.0"
authors = ["Jørgen P. Tjernø <jorgenpt@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = "^0.7.6"
structopt = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "bichrome.exe"
FileDescription = "biChrome"
ProductName = "biChrome"
LegalCopyright = "Copyright © Jørgen Tjernø <jorgenpt@gmail.com>"