[package]
name = "bichrome"
version = "0.5.0"
authors = ["Jørgen P. Tjernø <jorgen@tjer.no>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "^1"
const_format = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.9.0"
structopt = "0.3"
thiserror = "^1"
url = "^2.2.0"
webextension_pattern = { version ="0.3", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows_bindings = { path = "windows_bindings" }
winreg = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[package.metadata.winres]
OriginalFilename = "bichrome.exe"
FileDescription = "bichrome"
ProductName = "bichrome"
LegalCopyright = "© Jørgen Tjernø <jorgen@tjer.no>"